# TheLastAlgorithmsCourseYouWillNeed

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
course/: data_structures.py  utils.py
course/array/: array_list.py  ring_buffer.py
course/arrays/: array_list.py  ring_buffer.py
course/doubly_linked_list/: doubly_linked_list.py
course/graphs/: adjacency_matrix.py  dijkstra.py
course/heap/: min_heap.py
course/maps/: dictionary.py  lru.py
course/quick_sort/: quick_sort.py
course/recursion/: maze_solver.py
course/search/: binary_search.py  linear_search.py  two_crystal_balls.py
course/sort/: bubble_sort.py  queue.py  stack.py
course/trees/: binary_tree_bfs.py  binary_tree_in_order.py  binary_tree_node.py  binary_tree_post_order.py  binary_tree_pre_order.py  binary_tree_search.py  binary_tree_traversal.py  compare_binary_trees.py  trie.py
tests/array/: array_list_test.py  ring_buffer_test.py
tests/arrays/: array_list_test.py  ring_buffer_test.py
tests/doubly_linked_list/: doubly_linked_list_test.py
tests/graphs/: adjacency_matrix_test.py  dijkstra_test.py  graph_examples.py
tests/heap/: min_heap_test.py
tests/maps/: lru_test.py
tests/quick_sort/: quick_sort_test.py
tests/recursion/: maze_solver_test.py
tests/search/: binary_search_test.py  linear_search_test.py  two_crystal_balls_test.py
tests/sort/: bubble_sort_test.py  queue_test.py  stack_test.py
tests/trees/: binary_tree_bfs_test.py  binary_tree_compare_test.py  binary_tree_search_test.py  binary_tree_traversal_test.py  compare_trees_test.py  tree_examples.py  trie_test.py
